[project]
authors = [
  {name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"},
]
dependencies = [
  "fire>=0.7.0",
  "jageocoder>=2.1.8",
  "nicegui>=2.11.1",
  "pydantic-ai>=0.0.24",
]
description = "Chat with AI"
name = "nicegui-chat"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-chat"

[project.scripts]
chat = "nicegui_chat:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
  "CPY",
  "D400",
  "D415",
  "D203",
  "D213",
  "DOC201",
  "DOC402",
  "DOC501",
  "E501",
]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
